# TestnetFaucet

./: Cargo.toml  config.toml
src/: erc20_abi.rs  errors.rs  ierc20.rs  json_rpc.rs  lightning_structs.rs  main.rs  send.rs  structs.rs  utils.rs
