[package]
name = "testnetfaucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
config-file = "0.2.3"
ethereum_abi = "0.4.0"
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = "0.11.10"
secp256k1 = "0.21.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-aux = "3.0.1"
serenity = { version = "0.11.2", default-features = false, features = [
    "client",
    "rustls_backend",
    "model",
    "gateway",
] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
web3 = "0.18.0"
