[package]
name = "testnetfaucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
config-file = "0.2"
ethers = { version = "2", features = ["ws", "rustls"] }
hex = "0.4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "rustls_backend",
    "model",
    "gateway",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
